# jira-github-summary

./: .env.example  LICENSE  README.md  github.py  jira.py  pyproject.toml
